python_ffi/lotrc.h

typedef struct AlignedBuf {
  struct slice_AlignmentHelper data;
  uintptr_t size;
} AlignedBuf;
typedef struct ref_slice_u8 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u8;
typedef struct CompressedDataRef {
  struct ref_slice_u8 data;
  struct AlignedBuf data_decomp;
} CompressedDataRef;
typedef uint32_t u32_le;
typedef u32_le u32Pc;
typedef struct PakHeaderPc {
  u32Pc block_a_num;
  u32Pc block_a_offset;
  u32Pc constx13;
  u32Pc version;
  u32Pc strings_offset;
  u32Pc strings_size;
  u32Pc strings_num;
  u32Pc block1_offset;
  u32Pc block1_size;
  u32Pc block1_size_comp;
  u32Pc sub_blocks1_offset;
  u32Pc block2_offset;
  u32Pc block2_size;
  u32Pc block2_size_comp;
  u32Pc sub_blocks2_offset;
  u32Pc string_keys_offset;
  u32Pc unk_16;
  u32Pc obja_size;
  u32Pc obj0_size;
  u32Pc model_info_size;
  u32Pc buffer_info_size;
  u32Pc mat1_size;
  u32Pc mat2_size;
  u32Pc mat3_size;
  u32Pc mat4_size;
  u32Pc mat_extra_size;
  u32Pc unk_26;
  u32Pc shape_info_size;
  u32Pc hk_shape_info_size;
  u32Pc hk_constraint_data_size;
  u32Pc vbuff_info_size;
  u32Pc ibuff_info_size;
  u32Pc texture_info_size;
  u32Pc animation_info_size;
  u32Pc hk_constraint_info_size;
  u32Pc effect_info_size;
  u32Pc pfield_info_size;
  u32Pc gfx_block_info_size;
  u32Pc animation_block_info_size;
  u32Pc foliage_info_size;
  u32Pc radiosity_vals_info_size;
  u32Pc unk_41;
  u32Pc obja_num;
  u32Pc obj0_num;
  u32Pc model_info_num;
  u32Pc buffer_info_num;
  u32Pc mat1_num;
  u32Pc mat2_num;
  u32Pc mat3_num;
  u32Pc mat4_num;
  u32Pc mat_extra_num;
  u32Pc unk_51;
  u32Pc shape_info_num;
  u32Pc hk_shape_info_num;
  u32Pc hk_constraint_data_num;
  u32Pc vbuff_info_num;
  u32Pc ibuff_info_num;
  u32Pc texture_info_num;
  u32Pc animation_info_num;
  u32Pc hk_constraint_info_num;
  u32Pc effect_info_num;
  u32Pc pfield_info_num;
  u32Pc gfx_block_info_num;
  u32Pc animation_block_info_num;
  u32Pc foliage_info_num;
  u32Pc radiosity_vals_info_num;
  u32Pc unk_66;
  u32Pc obja_offset;
  u32Pc obj0_offset;
  u32Pc model_info_offset;
  u32Pc buffer_info_offset;
  u32Pc mat1_offset;
  u32Pc mat2_offset;
  u32Pc mat3_offset;
  u32Pc mat4_offset;
  u32Pc mat_extra_offset;
  u32Pc unk_76;
  u32Pc shape_info_offset;
  u32Pc hk_shape_info_offset;
  u32Pc hk_constraint_data_offset;
  u32Pc vbuff_info_offset;
  u32Pc ibuff_info_offset;
  u32Pc texture_info_offset;
  u32Pc animation_info_offset;
  u32Pc hk_constraint_info_offset;
  u32Pc effect_info_offset;
  u32Pc pfield_info_offset;
  u32Pc gfx_block_info_offset;
  u32Pc animation_block_info_offset;
  u32Pc foliage_info_offset;
  u32Pc radiosity_vals_info_offset;
  u32Pc unk_91;
  u32Pc unk_92;
  u32Pc unk_93;
  u32Pc unk_94;
  u32Pc unk_95;
  u32Pc unk_96;
  u32Pc unk_97;
  u32Pc unk_98;
  u32Pc unk_99;
  u32Pc unk_100;
  u32Pc unk_101;
  u32Pc unk_102;
  u32Pc unk_103;
  u32Pc unk_104;
  u32Pc unk_105;
  u32Pc unk_106;
  u32Pc unk_107;
  u32Pc unk_108;
  u32Pc unk_109;
  u32Pc unk_110;
  u32Pc unk_111;
  u32Pc unk_112;
  u32Pc unk_113;
  u32Pc unk_114;
  u32Pc unk_115;
  u32Pc block2_offsets_num;
  u32Pc block2_offsets_offset;
} PakHeaderPc;
typedef struct slice_string {
  uint64_t align;
  uint8_t pad[8];
} slice_string;
typedef struct slice_string StringsRefPc;
typedef struct ref_slice_ObjAPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ObjAPc;
typedef struct ref_slice_Obj0Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Obj0Pc;
typedef struct ref_slice_ModelInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ModelInfoPc;
typedef struct ref_slice_BufferInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BufferInfoPc;
typedef struct ref_slice_Mat1Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat1Pc;
typedef struct ref_slice_Mat2Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat2Pc;
typedef struct ref_slice_Mat3Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat3Pc;
typedef struct ref_slice_Mat4Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat4Pc;
typedef struct ref_slice_MatExtraPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_MatExtraPc;
typedef struct ref_slice_ShapeInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ShapeInfoPc;
typedef struct ref_slice_HkShapeInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkShapeInfoPc;
typedef struct ref_slice_HkConstraintDataPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkConstraintDataPc;
typedef struct ref_slice_VBuffInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_VBuffInfoPc;
typedef struct ref_slice_IBuffInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_IBuffInfoPc;
typedef struct ref_slice_TextureInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_TextureInfoPc;
typedef struct ref_slice_AnimationInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AnimationInfoPc;
typedef struct ref_slice_HkConstraintInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkConstraintInfoPc;
typedef struct ref_slice_EffectInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_EffectInfoPc;
typedef struct ref_slice_PFieldInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_PFieldInfoPc;
typedef struct ref_slice_GFXBlockInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_GFXBlockInfoPc;
typedef struct ref_slice_AnimationBlockInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AnimationBlockInfoPc;
typedef struct ref_slice_FoliageInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_FoliageInfoPc;
typedef struct ref_slice_RadiosityValsInfoPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RadiosityValsInfoPc;
typedef struct InfosRefPc {
  struct ref_slice_ObjAPc objas;
  struct ref_slice_Obj0Pc obj0s;
  struct ref_slice_ModelInfoPc models;
  struct ref_slice_BufferInfoPc buffers;
  struct ref_slice_Mat1Pc mat1s;
  struct ref_slice_Mat2Pc mat2s;
  struct ref_slice_Mat3Pc mat3s;
  struct ref_slice_Mat4Pc mat4s;
  struct ref_slice_MatExtraPc mat_extras;
  struct ref_slice_ShapeInfoPc shapes;
  struct ref_slice_HkShapeInfoPc hk_shapes;
  struct ref_slice_HkConstraintDataPc hk_constraint_datas;
  struct ref_slice_VBuffInfoPc vbuffs;
  struct ref_slice_IBuffInfoPc ibuffs;
  struct ref_slice_TextureInfoPc textures;
  struct ref_slice_AnimationInfoPc animations;
  struct ref_slice_HkConstraintInfoPc hk_constraints;
  struct ref_slice_EffectInfoPc effects;
  struct ref_slice_PFieldInfoPc pfields;
  struct ref_slice_GFXBlockInfoPc gfxs;
  struct ref_slice_AnimationBlockInfoPc animation_blocks;
  struct ref_slice_FoliageInfoPc foliages;
  struct ref_slice_RadiosityValsInfoPc radiosity_vals;
} InfosRefPc;
typedef struct IndexMap_u32__TextureRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__TextureRefPc;
typedef struct IndexMap_u32__ModelRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ModelRefPc;
typedef struct IndexMap_u32__EffectRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__EffectRefPc;
typedef struct IndexMap_u32__slice_FoliageRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__slice_FoliageRefPc;
typedef struct IndexMap_u32__ref_slice_u8 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ref_slice_u8;
typedef struct IndexMap_u32__RadiosityValsRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__RadiosityValsRefPc;
typedef struct RadiosityRefPc {
  const struct CompressedDataRef *data;
  struct IndexMap_u32__RadiosityValsRefPc vals;
  uint32_t usage;
} RadiosityRefPc;
typedef struct ObjsRefPc {
  struct IndexMap_u32__TextureRefPc textures;
  struct IndexMap_u32__ModelRefPc models;
  struct IndexMap_u32__EffectRefPc effects;
  struct IndexMap_u32__slice_FoliageRefPc foliages;
  struct IndexMap_u32__ref_slice_u8 gfxs;
  struct RadiosityRefPc radiosity;
} ObjsRefPc;
typedef struct SubBlocksHeaderPc {
  u32Pc z0;
  u32Pc block_num;
  u32Pc z2;
  u32Pc z3;
} SubBlocksHeaderPc;
typedef struct ref_slice_SubBlocksBlockHeaderPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_SubBlocksBlockHeaderPc;
typedef struct SubBlocksInfoRefPc {
  const struct SubBlocksHeaderPc *header;
  struct ref_slice_SubBlocksBlockHeaderPc block_headers;
} SubBlocksInfoRefPc;
typedef struct IndexMap_u32__DataRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__DataRefPc;
typedef struct IndexMap_u32__LuaRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__LuaRefPc;
typedef struct IndexMap_u32__SSARefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__SSARefPc;
typedef struct Option_AtlasUVRefPc {
  uint64_t align;
  uint8_t pad[8];
} Option_AtlasUVRefPc;
typedef struct GameObjsHeaderPc {
  u32Pc const_;
  u32Pc types_num;
  u32Pc types_offset;
  u32Pc obj_num;
  u32Pc obj_offset;
  u32Pc z5;
  u32Pc z6;
  u32Pc z7;
} GameObjsHeaderPc;
typedef struct IndexMap_u32__TypeRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__TypeRefPc;
typedef struct IndexMap_u32__ObjRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ObjRefPc;
typedef struct GameObjsRefPc {
  const struct GameObjsHeaderPc *header;
  struct IndexMap_u32__TypeRefPc types;
  struct IndexMap_u32__ObjRefPc objs;
} GameObjsRefPc;
typedef struct SubBlocks1RefPc {
  struct SubBlocksInfoRefPc info;
  struct IndexMap_u32__DataRefPc files;
  struct IndexMap_u32__LuaRefPc lua;
  struct IndexMap_u32__SSARefPc subtitles;
  struct Option_AtlasUVRefPc atlas1;
  struct Option_AtlasUVRefPc atlas2;
  struct GameObjsRefPc level;
} SubBlocks1RefPc;
typedef uint16_t u16_le;
typedef u16_le u16Pc;
typedef struct StringKeysHeaderPc {
  u16Pc num_a;
  u16Pc num_b;
  u32Pc z2;
  u32Pc z3;
  u32Pc z4;
  u32Pc z5;
} StringKeysHeaderPc;
typedef struct ref_slice_StringKeysValPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_StringKeysValPc;
typedef struct ref_slice_u32Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u32Pc;
typedef struct StringKeysRefPc {
  const struct StringKeysHeaderPc *header;
  struct ref_slice_StringKeysValPc vals;
  struct ref_slice_u32Pc pad;
} StringKeysRefPc;
typedef struct Block1RefPc {
  struct InfosRefPc infos;
  struct ObjsRefPc objs;
  struct SubBlocks1RefPc sub_blocks;
  struct StringKeysRefPc string_keys;
} Block1RefPc;
typedef struct Option_SprayRefPc {
  uint64_t align;
  uint8_t pad[24];
} Option_SprayRefPc;
typedef struct Option_CrowdRefPc {
  uint64_t align;
  uint8_t pad[32];
} Option_CrowdRefPc;
typedef struct Option_PFieldsRefPc {
  uint64_t align;
  uint8_t pad[8];
} Option_PFieldsRefPc;
typedef struct IndexMap_u32__LangStringsRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__LangStringsRefPc;
typedef struct SubBlocks2RefPc {
  struct SubBlocksInfoRefPc info;
  struct Option_SprayRefPc spray;
  struct Option_CrowdRefPc crowd;
  struct Option_PFieldsRefPc pfields;
  struct IndexMap_u32__LangStringsRefPc langs;
  struct IndexMap_u32__DataRefPc files;
} SubBlocks2RefPc;
typedef struct Block2RefPc {
  struct SubBlocks2RefPc sub_blocks;
  struct ref_slice_u32Pc offsets;
} Block2RefPc;
typedef struct IndexMap_u32__AnimationRefPc {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__AnimationRefPc;
typedef struct AnimationsRefPc {
  struct IndexMap_u32__AnimationRefPc animations;
  struct ref_slice_AnimationBlockInfoPc block_infos;
} AnimationsRefPc;
typedef struct ref_slice_BlockAValPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BlockAValPc;
typedef struct ref_slice_CompressedDataRef {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_CompressedDataRef;
typedef struct PakRefPc {
  const struct PakHeaderPc *header;
  StringsRefPc strings;
  struct Block1RefPc block1;
  struct Block2RefPc block2;
  struct AnimationsRefPc animations;
  struct ref_slice_BlockAValPc vals_a;
  struct ref_slice_CompressedDataRef animation_data;
} PakRefPc;
typedef struct BinHeaderPc {
  u32Pc constx06;
  u32Pc version;
  u32Pc strings_offset;
  u32Pc strings_size;
  u32Pc strings_num;
  u32Pc asset_handle_num;
  u32Pc asset_handle_offset;
  u32Pc unk_7;
  u32Pc vdata_num;
  u32Pc vdata_num_alt;
  u32Pc texdata_num;
  u32Pc unk_11;
  u32Pc unk_12;
  u32Pc unk_13;
  u32Pc unk_14;
  u32Pc unk_15;
  u32Pc unk_16;
  u32Pc unk_17;
  u32Pc unk_18;
  u32Pc unk_19;
  u32Pc unk_20;
  u32Pc unk_21;
  u32Pc unk_22;
  u32Pc unk_23;
  u32Pc unk_24;
  u32Pc unk_25;
  u32Pc unk_26;
  u32Pc unk_27;
  u32Pc unk_28;
  u32Pc unk_29;
  u32Pc unk_30;
  u32Pc unk_31;
  u32Pc unk_32;
  u32Pc unk_33;
  u32Pc unk_34;
  u32Pc unk_35;
  u32Pc unk_36;
  u32Pc unk_37;
  u32Pc unk_38;
  u32Pc unk_39;
  u32Pc unk_40;
  u32Pc unk_41;
  u32Pc unk_42;
} BinHeaderPc;
typedef struct ref_slice_AssetHandlePc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AssetHandlePc;
typedef struct IndexMap_u32_______CompressedDataRef {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32_______CompressedDataRef;
typedef struct BinRefPc {
  const struct BinHeaderPc *header;
  StringsRefPc strings;
  struct ref_slice_AssetHandlePc asset_handles;
  struct IndexMap_u32_______CompressedDataRef model_data;
  struct IndexMap_u32_______CompressedDataRef texture_data;
} BinRefPc;