python_ffi/lotrc_rs.pxd


  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_VBuffInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_IBuffInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_TextureInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AnimationInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_HkConstraintInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_EffectInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_PFieldInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_GFXBlockInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AnimationBlockInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_FoliageInfoPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RadiosityValsInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct InfosRefPc:
    ref_slice_ObjAPc objas;
    ref_slice_Obj0Pc obj0s;
    ref_slice_ModelInfoPc models;
    ref_slice_BufferInfoPc buffers;
    ref_slice_Mat1Pc mat1s;
    ref_slice_Mat2Pc mat2s;
    ref_slice_Mat3Pc mat3s;
    ref_slice_Mat4Pc mat4s;
    ref_slice_MatExtraPc mat_extras;
    ref_slice_ShapeInfoPc shapes;
    ref_slice_HkShapeInfoPc hk_shapes;
    ref_slice_HkConstraintDataPc hk_constraint_datas;
    ref_slice_VBuffInfoPc vbuffs;
    ref_slice_IBuffInfoPc ibuffs;
    ref_slice_TextureInfoPc textures;
    ref_slice_AnimationInfoPc animations;
    ref_slice_HkConstraintInfoPc hk_constraints;
    ref_slice_EffectInfoPc effects;
    ref_slice_PFieldInfoPc pfields;
    ref_slice_GFXBlockInfoPc gfxs;
    ref_slice_AnimationBlockInfoPc animation_blocks;
    ref_slice_FoliageInfoPc foliages;
    ref_slice_RadiosityValsInfoPc radiosity_vals;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__TextureRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__ModelRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__EffectRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__slice_FoliageRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__ref_slice_u8:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__RadiosityValsRefPc:
    uint64_t align;
    uint8_t pad[64];

  cdef struct RadiosityRefPc:
    const CompressedDataRef *data;
    IndexMap_u32__RadiosityValsRefPc vals;
    uint32_t usage;

  cdef struct ObjsRefPc:
    IndexMap_u32__TextureRefPc textures;
    IndexMap_u32__ModelRefPc models;
    IndexMap_u32__EffectRefPc effects;
    IndexMap_u32__slice_FoliageRefPc foliages;
    IndexMap_u32__ref_slice_u8 gfxs;
    RadiosityRefPc radiosity;

  #gen_ffi:export
  cdef struct SubBlocksHeaderPc:
    u32Pc z0;
    u32Pc block_num;
    u32Pc z2;
    u32Pc z3;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_SubBlocksBlockHeaderPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct SubBlocksInfoRefPc:
    const SubBlocksHeaderPc *header;
    ref_slice_SubBlocksBlockHeaderPc block_headers;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__DataRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__LuaRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__SSARefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_AtlasUVRefPc:
    uint64_t align;
    uint8_t pad[8];

  #gen_ffi:export
  cdef struct GameObjsHeaderPc:
    u32Pc const_;
    u32Pc types_num;
    u32Pc types_offset;
    u32Pc obj_num;
    u32Pc obj_offset;
    u32Pc z5;
    u32Pc z6;
    u32Pc z7;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__TypeRefPc:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__ObjRefPc:
    uint64_t align;
    uint8_t pad[64];

  cdef struct GameObjsRefPc:
    const GameObjsHeaderPc *header;
    IndexMap_u32__TypeRefPc types;
    IndexMap_u32__ObjRefPc objs;

  cdef struct SubBlocks1RefPc:
    SubBlocksInfoRefPc info;
    IndexMap_u32__DataRefPc files;
    IndexMap_u32__LuaRefPc lua;
    IndexMap_u32__SSARefPc subtitles;
    Option_AtlasUVRefPc atlas1;
    Option_AtlasUVRefPc atlas2;
    GameObjsRefPc level;

  ctypedef uint16_t u16_le;

  ctypedef u16_le u16Pc;

  #gen_ffi:export
  cdef struct StringKeysHeaderPc:
    u16Pc num_a;
    u16Pc num_b;
    u32Pc z2;
    u32Pc z3;
    u32Pc z4;
    u32Pc z5;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_StringKeysValPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_u32Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct StringKeysRefPc:
    const StringKeysHeaderPc *header;
    ref_slice_StringKeysValPc vals;
    ref_slice_u32Pc pad;

  cdef struct Block1RefPc:
    InfosRefPc infos;
    ObjsRefPc objs;
    SubBlocks1RefPc sub_blocks;
    StringKeysRefPc string_keys;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_SprayRefPc:
    uint64_t align;
    uint8_t pad[24];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_CrowdRefPc:
    uint64_t align;
    uint8_t pad[32];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_PFieldsRefPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__LangStringsRefPc:
    uint64_t align;
    uint8_t pad[64];

  cdef struct SubBlocks2RefPc:
    SubBlocksInfoRefPc info;
    Option_SprayRefPc spray;
    Option_CrowdRefPc crowd;
    Option_PFieldsRefPc pfields;
    IndexMap_u32__LangStringsRefPc langs;
    IndexMap_u32__DataRefPc files;

  cdef struct Block2RefPc:
    SubBlocks2RefPc sub_blocks;
    ref_slice_u32Pc offsets;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__AnimationRefPc:
    uint64_t align;
    uint8_t pad[64];

  cdef struct AnimationsRefPc:
    IndexMap_u32__AnimationRefPc animations;
    ref_slice_AnimationBlockInfoPc block_infos;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_BlockAValPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_CompressedDataRef:
    uint64_t align;
    uint8_t pad[8];

  cdef struct PakRefPc:
    const PakHeaderPc *header;
    StringsRefPc strings;
    Block1RefPc block1;
    Block2RefPc block2;
    AnimationsRefPc animations;
    ref_slice_BlockAValPc vals_a;
    ref_slice_CompressedDataRef animation_data;

  #gen_ffi:export
  cdef struct BinHeaderPc:
    u32Pc constx06;
    u32Pc version;
    u32Pc strings_offset;
    u32Pc strings_size;
    u32Pc strings_num;
    u32Pc asset_handle_num;
    u32Pc asset_handle_offset;
    u32Pc unk_7;
    u32Pc vdata_num;
    u32Pc vdata_num_alt;
    u32Pc texdata_num;
    u32Pc unk_11;
    u32Pc unk_12;
    u32Pc unk_13;
    u32Pc unk_14;
    u32Pc unk_15;
    u32Pc unk_16;
    u32Pc unk_17;
    u32Pc unk_18;
    u32Pc unk_19;
    u32Pc unk_20;
    u32Pc unk_21;
    u32Pc unk_22;
    u32Pc unk_23;
    u32Pc unk_24;
    u32Pc unk_25;
    u32Pc unk_26;
    u32Pc unk_27;
    u32Pc unk_28;
    u32Pc unk_29;
    u32Pc unk_30;
    u32Pc unk_31;
    u32Pc unk_32;
    u32Pc unk_33;
    u32Pc unk_34;
    u32Pc unk_35;
    u32Pc unk_36;
    u32Pc unk_37;
    u32Pc unk_38;
    u32Pc unk_39;
    u32Pc unk_40;
    u32Pc unk_41;
    u32Pc unk_42;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AssetHandlePc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32_______CompressedDataRef:
    uint64_t align;
    uint8_t pad[64];

  cdef struct BinRefPc:
    const BinHeaderPc *header;
    StringsRefPc strings;
    ref_slice_AssetHandlePc asset_handles;
    IndexMap_u32_______CompressedDataRef model_data;
    IndexMap_u32_______CompressedDataRef texture_data;
